feat: fix Arrays bytecode verification - handle Class/MethodType in ldc constants